--- a/hack/config-sample.yml
+++ b/hack/config-sample.yml
@@ -2,6 +2,13 @@ apiVersion: kubescheduler.config.k8s.io/v1beta1
 kind: KubeSchedulerConfiguration
 leaderElection:
   resourceName: lwabish-scheduler
+clientConnection:
+  acceptContentTypes: ""
+  burst: 100
+  contentType: application/vnd.kubernetes.protobuf
+  # kubeconfig路径
+  kubeconfig: /Users/xxxxxx/.kube/config
+  qps: 50
 profiles:
   - pluginConfig:
       - args:
